<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#0a2c36"
    android:forceHasOverlappingRendering="true"
    android:rotation="0"
    android:visibility="visible"
    tools:context=".SnakeActivity">

    <ViewFlipper
        android:id="@+id/main_layout_view_flipper"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/smallstars">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/main_menu_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/titleText"
                android:layout_width="400dp"
                android:layout_height="80dp"
                android:text="@string/title_text"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="60sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.05" />


            <Button
                android:id="@+id/easyButton"
                android:layout_width="100dp"
                android:layout_height="48dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/button1"
                android:elegantTextHeight="false"
                android:text="@string/easyText"
                android:textColor="#000000"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.499"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/titleText" />

            <Button
                android:id="@+id/mediumButton"
                android:layout_width="100dp"
                android:layout_height="48dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/button2"
                android:text="@string/mediumText"
                android:textColor="#000000"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.499"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/easyButton" />

            <Button
                android:id="@+id/hardButton"
                android:layout_width="100dp"
                android:layout_height="48dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/button3"
                android:text="@string/hardText"
                android:textColor="#000000"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.499"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mediumButton" />

            <Button
                android:id="@+id/highScoresButton"
                android:layout_width="100dp"
                android:layout_height="48dp"
                android:layout_marginTop="38dp"
                android:layout_marginBottom="32dp"
                android:background="@drawable/button4"
                android:text="@string/highScoresText"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.499"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/hardButton"
                app:layout_constraintVertical_bias="1.0" />

            <androidx.constraintlayout.widget.Group
                android:id="@+id/mainMenuGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="visible"
                app:constraint_referenced_ids="easyButton,mediumButton,hardButton,highScoresButton" />

            <Button
                android:id="@+id/scoresHardButton"
                android:layout_width="100dp"
                android:layout_height="48dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/button3"
                android:text="@string/hardText"
                android:textColor="#000000"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.3"
                app:layout_constraintStart_toEndOf="@+id/recyclerView"
                app:layout_constraintTop_toBottomOf="@+id/mediumButton" />

            <Button
                android:id="@+id/scoresMediumButton"
                android:layout_width="100dp"
                android:layout_height="48dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/button2"
                android:text="@string/mediumText"
                android:textColor="#000000"
                app:layout_constraintBottom_toTopOf="@+id/scoresHardButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.3"
                app:layout_constraintStart_toEndOf="@+id/recyclerView"
                app:layout_constraintTop_toBottomOf="@+id/easyButton" />

            <Button
                android:id="@+id/scoresEasyButton"
                android:layout_width="100dp"
                android:layout_height="48dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/button1"
                android:elegantTextHeight="false"
                android:text="@string/easyText"
                android:textColor="#000000"
                app:layout_constraintBottom_toTopOf="@+id/scoresMediumButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.3"
                app:layout_constraintStart_toEndOf="@+id/recyclerView"
                app:layout_constraintTop_toBottomOf="@+id/titleText" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="272dp"
                android:layout_height="200dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                app:layout_constraintBottom_toTopOf="@+id/scoresMenuBackButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/titleText"
                app:layout_constraintVertical_bias="0.282" />

            <Button
                android:id="@+id/scoresMenuBackButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@drawable/button5"
                android:paddingLeft="20dp"
                android:paddingTop="10dp"
                android:paddingRight="20dp"
                android:paddingBottom="10dp"
                android:text="@string/scoresMenuBackText"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.constraintlayout.widget.Group
                android:id="@+id/scoresMenuGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                app:constraint_referenced_ids="scoresHardButton,scoresMediumButton,scoresEasyButton,recyclerView,scoresMenuBackButton" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/game_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/gameLayoutBackButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginBottom="24dp"
                android:background="@drawable/button6"
                android:paddingLeft="20dp"
                android:paddingTop="10dp"
                android:paddingRight="20dp"
                android:paddingBottom="10dp"
                android:text="@string/gameLayoutBackText"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ViewFlipper>
</androidx.constraintlayout.widget.ConstraintLayout>